# TNN

./: CMakeLists.txt
include/tnn/: version.h
scripts/: build_aarch64_macos.sh  build_tnntorch_aarch64_macos.sh  build_tnntorch_x86_macos.sh
source/tnn/core/: abstract_device.h  abstract_network.cc  abstract_network.h  const_folder.cc  const_folder.h  default_network.cc  instance.cc  layer_type.cc  layer_type.h
source/tnn/device/cpu/: cpu_blob_converter.cc  cpu_device.cc
source/tnn/device/cuda/: cuda_device.cc  cuda_device.h
source/tnn/device/huawei_npu/: npu_network.cc
source/tnn/device/x86/: x86_device.cc
source/tnn/interpreter/: layer_param.h
source/tnn/layer/: deconv_layer.cc  expand_layer.cc  multidir_broadcast_layer.cc
source/tnn/memory_manager/: shared_memory_manager.cc
source/tnn/network/coreml/: coreml_model.mm  coreml_network.mm
source/tnn/network/torch/: CMakeLists.txt  check_qat_mode.cc  check_qat_mode.h  partitioning.cc  register_tnn_op.cc  shape_inference.cc  shape_inference.h  tnn_optimize.cc  tnn_optimize.h  to_dot_graph.cc  to_dot_graph.h  torch_compile.cc  torch_convert.cc  torch_convert.h  torch_macro.h  torch_network.cc  torch_network.h  torch_op_converter.cc  torch_op_converter.h  torch_optimize.cc  torch_tnn_engine.cc  torch_tnn_runtime.h  torch_types.cc  torch_utils.cc  torch_utils.h
source/tnn/optimizer/: net_optimizer_insert_fp16_reformat.cc  net_optimizer_insert_layout_reformat.cc
source/tnn/utils/: blob_converter_default.cc
test/: flags.cc  flags.h  test.cc  test.h
test/unit_test/: unit_test_common.cc
(+21 files in other folders)
